# Uncrowned-King

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml  security.yml
crates/uk-auth/: Cargo.toml
crates/uk-auth/src/: lib.rs
crates/uk-client/: Cargo.toml
crates/uk-client/src/: config.rs  config_state.rs  lib.rs  main.rs  observability.rs  quic.rs  relay.rs  session.rs  socks5.rs  tls.rs
crates/uk-client/tests/: tcp_relay_e2e.rs
crates/uk-policy/: Cargo.toml
crates/uk-policy/src/: lib.rs
crates/uk-proto/: Cargo.toml
crates/uk-proto/benches/: codec.rs
crates/uk-proto/fuzz/: .gitignore  Cargo.toml  README.md
crates/uk-proto/fuzz/fuzz_targets/: auth_payload.rs  frame_header.rs  target_decoder.rs  tcp_state.rs  udp_state.rs
crates/uk-proto/src/: carrier.rs  datagram.rs  endpoint.rs  error.rs  flow.rs  frame.rs  io.rs  lib.rs  settings.rs  status.rs  target.rs  tcp.rs  udp.rs  varint.rs
crates/uk-server/: Cargo.toml
crates/uk-server/src/: access_control.rs  config.rs  lib.rs  main.rs  observability.rs  quic.rs  relay.rs  security.rs  tls.rs
deploy/: README.md
deploy/kubernetes/: uncrowned-king-server.yaml
deploy/monitoring/: alertmanager-example.yaml  grafana-dashboard.json  prometheus-alerts.yaml
deploy/systemd/: uncrowned-king-client.service  uncrowned-king-server.service
docs/: key-management.md  launch-gate.md  operations.md  performance.md  production-roadmap.md  spec-v0.1.md  test-vectors.md  threat-model.md  whitepaper.md
examples/: README.md  client.toml  policy.toml  server.toml
scripts/: interop-curl.sh
