[workspace]
members = [
    "crates/uk-auth",
    "crates/uk-client",
    "crates/uk-policy",
    "crates/uk-proto",
    "crates/uk-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["UncrownedKing Contributors"]
repository = "https://example.invalid/uncrownedking"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
doc_markdown = "allow"
duration_suboptimal_units = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
