[workspace]
members = [
    "crates/uk-auth",
    "crates/uk-client",
    "crates/uk-policy",
    "crates/uk-proto",
    "crates/uk-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
authors = ["Uncrowned King Contributors"]
repository = "https://github.com/HappyLeslieAlexander/Uncrowned-King"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
rand = "0.8"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
