[package]
name = "uk-client"
description = "SOCKS5 client and TLS carrier for Uncrowned King."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "uk-client"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
clap.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uk-auth = { path = "../uk-auth" }
uk-policy = { path = "../uk-policy" }
uk-proto = { path = "../uk-proto" }
zeroize.workspace = true

[dev-dependencies]
socket2 = "0.6"
uk-auth = { path = "../uk-auth" }
uk-server = { path = "../uk-server" }

[lints]
workspace = true
