[package]
name = "uk-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
uk-auth = { path = "../uk-auth" }
uk-proto = { path = "../uk-proto" }

[lints]
workspace = true
