[package]
name = "uk-proto"
description = "Wire protocol primitives for Uncrowned King."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
